<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Merchandising</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="help">Помощь</string>
    <string name="profile">Профиль</string>
    <string name="singin">Войти</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="logout">Выйти</string>
    <string name="input_data">Введите данные</string>
    <string name="shops">Магазины</string>
    <string name="refresh">Обновить</string>
    <string name="post">Отправить отчет</string>
    <string name="delete">Удалить</string>
    <string name="make_photo">Сфотографировать</string>
    <string name="report">Отчет</string>
    <string name="error_flash">Проблемы с флеш накопителем</string>
    <string name="unselectAll">Снять все</string>
    <string name="cancel">Отмена</string>
    <string name="ok">Ок</string>
    <string name="confirmation">Подтверждение</string>
    <string name="nothing_selected">Ничего не выбрано</string>
    <string name="title_activity_image_detail">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="descroption">Пояснение</string>
    <string name="get_root">Получить разрешение работать не по графику</string>
    <string name="customized_schedule">Работа не по графику</string>
    <string name="photo_report">Фотоотчет</string>
    <string name="order">Заказ</string>
    <string name="error_sending_report">Ошибка отправки отчета</string>
    <string name="sexes">Данные загружены</string>
    <string name="supervizer_code">Код разрешения от сепервайзера</string>
    <string name="get_code">Запросить код</string>
    <string name="send_code">Отправить код</string>
    <string name="requests_sexes">Запрос успешно отправлен. Дождитесь смс с кодом разрешения от супервайзера.</string>
    <string name="incounted_time">Время прихода</string>
    <string name="outcounted_time">Время ухода</string>
    <string name="wrong_time">Неправильное время</string>
    <string name="have_no_photo">Фотографии для отправки отсутствуют</string>
    <string name="cost">Цена:</string>
    <string name="numFases">Количество фейсов:</string>
    <string name="residue">Остаток:</string>
    <string name="plaсe">Дополнительного места:</string>
    <string name="not_correct_tata">Некорректные данные</string>
    <string name="conformtion">Подтверждение</string>
    <string name="not_all_fields_filled">Данные не по всем товарам заполнены. Вы
    действительно хотите отправить незаполненный отчет?"</string>
    <string name="num_order">Количество товара</string>
    <string name="date_order">Дата заказа</string>
    <string name="date_order_done">Дата поставки</string>
    <string name="num">Количество:</string>
    <string name="date_order_1">Дата заказа:</string>
    <string name="date_order_done_1">Дата поставки:</string>
    <string name="wrong_date">Дата введена неправильно</string>
    <string name="face_report">Отчет по ассортименту</string>
    <string name="returned">Возврат/Обмен:</string>
    <string name="exchange">Обмен товаров</string>
    <string name="visyaki">Висяки</string>
    <string name="numRet">Количество возвратов:</string>
    <string name="resone">Причина возврата:</string>
    <string name="num_order_1">Количество товара:</string>
    <string name="date_refresh">Дата обновления:</string>
    <string name="resone_vis">Причина возникновения:</string>
    <string name="response">Контактное лицо, ответственное за адаптацию:</string>
    <string name="nothing_send">Нет данных для отправки</string>
    <string name="done">Готово</string>
    <string name="sexes_skip">Отчет успешно пропущен</string>
    <string name="requests_error">Запрос не выполнен по причине проблем с сетью</string>
    <string name="send_report">Отправить отчеты</string>
    <string name="save">Сохранить</string>
    <string name="send_photo">Отправить фотографии</string>
    <string name="enable_wifi">Отправка фото возможна только через vifi, включить?</string>
    <string name="enable_wifi_ok">Включить vifi</string>
    <string name="actual_version">Вы используете актуальную вертию задаий</string>
    <string name="error_dounloading">Ошибка загрузки заданий, попробуйте снова</string>
    <string name="db_refresh">Обновление базы данных</string>
    <string name="sending_photo">Оправка фотографий завершена</string>
    <string name="db_version_refreshed">Версия базы данных обновлена</string>
    <string name="special_tascs">Специальные задания</string>
    <string name="messages">Сообщения</string>
    <string name="visyak">Висяк:</string>
    <string name="all_face">Общий фейс</string>
    <string name="by_schedule">По расписанию</string>
    <string name="from">из</string>
    <string name="send_result">%1$d из %2$d фотографий отправлено</string>
    <string name="numberOrder">Номер заказа (Необязательно)</string>
    <string name="take">Принять</string>
    <string name="refuse">Отказать</string>
    <string name="taked">Принято</string>
    <string name="refused">Отменено</string>
    <string name="help_text">\t1. График посещений магазинов храниться в телефоне и наличие обновлений заданий проверяется при зупуске.
    Если отсутствует подключение к сети интернет, есть вероятность использования устаревшего расписания.
        В главном меню есть пункт "Обновить", обновляющий базу данных заданий.\n\t
    2. При запуске приложения рекомендуется просмотреть список сообщений и оперативных заданий.\n\t
    3. Если выполнить задание не по графику, оно не исчезнет из списка заданий по графику. Рекомендуется запоминать задания, которые вы выполнили не по графику.
    После заполнения отчета информация сохраняется, что поможет определить выполненное задание.\n\t
    4. Фотоотчеты отправляются автоматически при подключении к сети WiFi. После отправки фотографий появится уведомление, в котором будет указано количество отправленных и не оотправленних фотографий.
    Если вы не уверены в отправке фотографий, их можно отправить вручную, нажав кнопку меню на главном экране.\n\t
    5. Если после отправки отчета отправить повторно отчет с другими данными или с большим количеством данных, то на сервере новый отчет не отменит предыдущий, а дополнит его.</string>
    <string name="search">Поиск</string>
    <string name="clear">Очистить</string>
    <string name="photosendingisstarted">Отправка фотографий начата…</string>
    <string name="tasks_by_date">Показаны задания для</string>
    <string name="report_sended">Отчет отправлен</string>
    <string name="uploading_finished">Отправка фотографий завершена</string>
</resources>
