<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search_button"
        android:icon="@drawable/abc_ic_search"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_clear"
        android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="1"
        android:title="@string/clear"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_done"
        android:icon="@drawable/done_icon"
        android:orderInCategory="1"
        android:title="@string/save"
        app:showAsAction="always" />

</menu>