<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/dp4"
        android:text="@string/supervizer_code" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignRight="@+id/textView"
        android:layout_below="@+id/textView"
        android:inputType="textPassword"
        android:padding="@dimen/dp4" />

    <Button
        android:id="@+id/buttonGetCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignRight="@+id/editText"
        android:layout_below="@+id/editText"
        android:text="@string/get_code" />

    <Button
        android:id="@+id/buttonSendCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonGetCode"
        android:layout_alignRight="@+id/buttonGetCode"
        android:layout_below="@+id/buttonGetCode"
        android:text="@string/send_code" />

</RelativeLayout>