<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:text="123"
        android:id="@+id/editLogin"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/editPassword" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:text="123"
        android:id="@+id/editPassword"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/singin"
        android:id="@+id/buttonLogin"
        android:layout_below="@+id/editPassword"
        android:layout_alignLeft="@+id/editPassword"
        android:layout_alignRight="@+id/editPassword" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/textView"
        android:padding="@dimen/dp4"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/editLogin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:padding="@dimen/dp4"
        android:id="@+id/textView2"
        android:layout_below="@+id/editLogin"
        android:layout_alignLeft="@+id/editPassword" />
</RelativeLayout>